--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: Strongpassword1234
-      POSTGRES_DB: shopdb
+      POSTGRES_DB: songDB
     ports:
       - "5432:5432"
     volumes:
